# slack-cleanup

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  app_manifest.json  compose.yml  devenv.nix  pyproject.toml
.github/: FUNDING.yaml
.github/workflows/: docker-publish.yml
slack_cleanup/: cleaner.py  cli.py  config.py  exceptions.py
