[tool.poetry]
name = "slack-cleanup"
version = "0.0.0"
description = "A CLI tool for cleaning up Slack messages"
authors = ["Mykhailo Marynenko <mykhailo@0x77.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "slack_cleanup" }]

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.21.3"
python-dotenv = "^1.0.0"
typer = "^0.9.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
isort = "^5.12.0"
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slack-cleanup = "slack_cleanup.cli:app"
