[tool.poetry]
name = "slack-cleanup"
version = "0.2.0"
description = "A CLI tool for cleaning up Slack messages"
authors = ["Mykhailo Marynenko <mykhailo@0x77.dev>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "slack_cleanup" }]

[tool.poetry.dependencies]
python = "^3.11"
slack-sdk = "^3.21.3"
python-dotenv = "^1.0.0"
typer = "^0.15.0"
pydantic = "^2.0.0"
pydantic-settings = "^2.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
black = "^24.0.0"
isort = "^5.12.0"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
slack-cleanup = "slack_cleanup.cli:app"
